fix overflow

--- a/css/main.css
+++ b/css/main.css
@@ -100,7 +100,7 @@ span > a:active {
 }
 
 body {
-    overflow-x: hidden; /*IMPORTANT TO CHANGE IF EXPANDING*/
+    overflow: hidden; /*IMPORTANT TO CHANGE IF EXPANDING*/
     width: 100%;
     min-height: 100vh;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -211,10 +211,12 @@ section {
     display: inline-block;
     margin: 0 0 1em 0;
 }
+
 #resume:hover button {
     border: 2px solid #90CAF9;
     background-color: #1565C0;
 }
+
 #resume:active button {
     font-size: 1.1em;
 }
